[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.11",
    "firebase-admin>=6.6.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.20",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.41",
    "langchain-groq>=0.2.4",
    "langchain-openai>=0.3.7",
    "pip>=25.0.1",
    "pydantic>=2.10.6",
    "pypdf>=5.3.1",
]
